# pkb

./: PROJECT_PLAN.md  README.md
pkm-service/: .env-example  README.md  pyproject.toml  requirements.txt  run.py  test_llm.py
pkm-service/docs/: API接口文档.md  项目说明.txt
pkm-service/knowledge_base/: catalog.json
pkm-service/knowledge_base/inbox/: 1f146ca0-6482-62d3-b964-18353f5ae2d8.md  1f146cbd-4b78-6f5e-a961-f266b6354454.md  1f146cbe-c049-6e2b-8555-6a8ec875cb85.md  1f146ccc-b231-63f1-bc78-174a69cb732d.md  1f146cd8-a956-606a-bb67-87a15ae7befc.md  1f146d7e-0fb9-6c9c-86bf-4346204eb49b.md  1f146d86-85f1-6627-a5d0-d7365638ce72.md  1f147ce6-a9cc-6c66-96e6-6648545a65df.md  1f147ced-e2d8-62f3-88b5-f7bdea065032.md  1f1485c6-dc37-6a21-8beb-287b559b442b.md  1f14ae02-2adc-689c-a115-0b0e80027e18.md  1f14aeac-528d-66dc-99e1-8020225076a3.md  1f14bba0-0630-60e2-a66d-407bb8fc510a.md  1f14e135-87a0-64d3-9dba-284a49535229.md  1f14fa4e-5c23-69a2-b738-0e8502689309.md  1f14fa4f-3900-65d1-9e8f-c78f0aad989a.md  1f14fa92-ba18-6d72-83fe-45d06cecf3ab.md  1f151f3b-ba58-619d-94ad-5aa031448fb9.md  1f151f42-353f-6577-9c2a-665c7658c0f9.md  1f154596-2578-6c9e-8c50-f13529d7461e.md  1f1545a9-f8f2-6275-948e-cd2d1a9d2e76.md  1f1545ac-a10d-6899-81aa-48cae24d6dc5.md  1f1545ad-47e1-643b-be85-ecd35e62f725.md  1f1574f4-502b-614f-a440-f81d5a7e95f9.md  1f1574f8-73ca-6eac-aa8b-bb73afb526cc.md  1f15cfb0-e617-69bf-9e5b-e8c2f451bfb9.md  1f15db54-0321-608d-855b-0434213d1192.md  1f15db54-9e6b-647b-9b4f-8f47e18c7cd3.md  (+7 more)
pkm-service/pkm_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pkm-service/src/: main.py
(+44 files in other folders)
